--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>My App</title>
-    <!-- add style.css  -->
+		<!-- add style.css  -->
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div id="root"></div>
-		<script src="../src/index.js"></script>
+		<script src="../src/index.js" type="text/jsx"></script>
 	</body>
 </html>
